crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_159_BandaiLZ93D50_24C01_SD_Gundam_Gaiden_Knight_Gundam_Monogatari_Japan_Rev_1.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-159-BandaiLZ93D50-24C01/SD Gundam Gaiden - Knight Gundam Monogatari (Japan) (Rev 1).nes
rom_sha256=4cad3c9b8b56597dd093094b08ee30a834d7392de50f4585e7f3d0da05bd01ff
frames=600
fb_bytes=245760
cycles=17838522
audio_samples=439524
audio_fnv1a64=20d2ec2947710903
checkpoint f600 fb_fnv1a64=3bb95366e809db8a
