crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_159_BandaiLZ93D50_24C01_SD_Gundam_Gaiden_Knight_Gundam_Monogatari_Japan_Rev_1_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-159-BandaiLZ93D50-24C01/SD Gundam Gaiden - Knight Gundam Monogatari (Japan) (Rev 1).zip
rom_sha256=b1b0da05bcc2040d8112825dde105ba1ba74a2b4e558ec1ee22dc25e6200b6fc
frames=1141
fb_bytes=245760
cycles=33949776
audio_samples=836505
audio_fnv1a64=6ad82ac169c25a12
checkpoint f900 fb_fnv1a64=121a47d052712724
checkpoint f1100 fb_fnv1a64=db7764d6f1c5cdb9
