crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_162_WaixingFS304_Chong_Wu_Jin_Hua_Shi_Pet_Evolve_ES_1085_Ch.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-162-WaixingFS304/Chong Wu Jin Hua Shi (Pet Evolve) (ES-1085) (Ch).nes
rom_sha256=b8f25f2276f211e285f790ef712666a0d6c1c0862cbba99a032643a24404ead0
frames=1141
fb_bytes=245760
cycles=33949962
audio_samples=836509
audio_fnv1a64=15766b4c4a876f4f
checkpoint f900 fb_fnv1a64=89ee4c476c97a325
checkpoint f1100 fb_fnv1a64=89ee4c476c97a325
