crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_162_WaixingFS304_Shen_Gui_Chuan_Qi_The_Mummy_ES_1109_Ch.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-162-WaixingFS304/Shen Gui Chuan Qi (The Mummy) (ES-1109) (Ch).nes
rom_sha256=fd7afc402dd848dddef7b22f0bc269d24d7102f31e3d6d067cacc8ddf2581a15
frames=1141
fb_bytes=245760
cycles=33949775
audio_samples=836505
audio_fnv1a64=d21ed54b6b756417
checkpoint f900 fb_fnv1a64=c345f06d612d8131
checkpoint f1100 fb_fnv1a64=c345f06d612d8131
